# devops-agent-library

./: .agentsrc.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: pr-agent.yml
agents/pr_agent/: main.py
agents/pr_agent/analyzers/: __init__.py  patterns.py  summarizer.py
agents/pr_agent/prompts/: summarize.md  tests_docs.md
core/: audit_log.py  config.py  github_client.py  llm_client.py
devops-agents/: .agentsrc.yml  README.md
devops-agents/agents/pr_agent/: __init__.py  main.py
devops-agents/agents/pr_agent/analyzers/: reviewer.py  security.py  test_checker.py
devops-agents/agents/pr_agent/prompts/: review.md  security.md
devops-agents/core/: __init__.py  base_agent.py  github_client.py  prompt_loader.py
devops-agents/tests/: test_smoke.py
