[project]
name = "devops-agents"
version = "0.1.0"
description = "Library of reusable DevOps agents powered by GitHub Models"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5.0",
]

[project.scripts]
pr-agent = "agents.pr_agent.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "agents*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
